Lectura del JSON/Reajuste de matriz segun grafo ingresado